gulp compile failing

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /******************************************************************
-Theme Name: ORNC Venues and Events
-Theme URI: http://www.ornc.org.uk/venuehire
-Description: ORNC Venues
-Author: Nathan Edwards
+Theme Name: B&I Restaurant Theme
+Theme URI: http://chandco.net
+Description: A theme for Lusso and charlton House unit restaurants
+Author: Nathan Edwards / Raj Chudasama
 Author URI: http://www.chandco.net
-Version: 0.9
+Version: 0.1
 
 ******************************************************************/
 
